MangoBajito/tests/Lenguajes_2/Operacion/valid/14-igualdad.mng
# Test 14: Operador de igualdad (igualito)
se_prende(){
	culito n0 : tas_claro = 3 igualito 3;
	culito n1 : tas_claro = 3 igualito 2;
	culito n2 : tas_claro = 3 igualito 3.0;
	culito n3 : tas_claro = 3 igualito 2.0;
	culito n4 : tas_claro = 3 igualito 0.03e+2;
	culito n5 : tas_claro = 3 igualito 0.02e+2;
	culito n6 : tas_claro = 3 igualito 'h';
	culito n7 : tas_claro = 3 igualito "hola";
	culito n8 : tas_claro = 3 igualito Sisa;
	
	culito n9 : tas_claro = 3.2 igualito 3.2;
	culito n10 : tas_claro = 3.2 igualito 3.21;
	culito n11 : tas_claro = 3.2 igualito 0.032e+2;
	culito n12 : tas_claro = 3.2 igualito 0.0321e+2;
	culito n13 : tas_claro = 3.2 igualito 'h';
	culito n14 : tas_claro = 3.2 igualito "hola";
	culito n15 : tas_claro = 3.2 igualito Sisa;
	
	culito n16 : tas_claro = 0.032e+2 igualito 0.032e+2;
	culito n17 : tas_claro = 0.032e+2 igualito 0.0321e+2;
	culito n18 : tas_claro = 0.032e+2 igualito 'h';
	culito n19 : tas_claro = 0.032e+2 igualito "hola";
	culito n20 : tas_claro = 0.032e+2 igualito Sisa;
	
	culito n21 : tas_claro = 'h' igualito 'h';
	culito n22 : tas_claro = 'h' igualito "hola";
	culito n23 : tas_claro = 'h' igualito Sisa;

	culito n24 : tas_claro = "hola" igualito "hola";
	culito n25 : tas_claro = "hola" igualito Sisa;

	culito n26 : tas_claro = Sisa igualito Sisa;
	culito n27 : tas_claro = Sisa igualito Nolsa;
};
